src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DASHDASH
    ID
    MINUS_MINUS
    NEWLINE
    NOT
    STRING

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> function_declaration
Rule 5     statement -> expressiontypes
Rule 6     statement -> function_dot
Rule 7     statement -> arithmetic_expression
Rule 8     statement -> comparison_expression
Rule 9     statement -> function_string
Rule 10    statement -> function_char
Rule 11    statement -> function_emit
Rule 12    statement -> space
Rule 13    statement -> cr
Rule 14    statement -> 2dup
Rule 15    statement -> condicinal1
Rule 16    statement -> condicinal2
Rule 17    function_declaration -> FUNCTION
Rule 18    cr -> CR
Rule 19    function_char -> CHAR
Rule 20    space -> SPACE
Rule 21    function_string -> FUNCTION_STRING
Rule 22    function_emit -> EMIT
Rule 23    expressiontypes -> NUMBER
Rule 24    function_dot -> DOT
Rule 25    arithmetic_expression -> statement statement arithmetic_op
Rule 26    arithmetic_op -> ADD
Rule 27    arithmetic_op -> MINUS
Rule 28    arithmetic_op -> TIMES
Rule 29    arithmetic_op -> DIVIDE
Rule 30    arithmetic_op -> MOD
Rule 31    comparison_expression -> statement statement comparison_op
Rule 32    condicinal1 -> CONDICIONAL1
Rule 33    condicinal2 -> CONDICIONAL2
Rule 34    2dup -> 2DUP
Rule 35    comparison_op -> INF
Rule 36    comparison_op -> INFEQ
Rule 37    comparison_op -> SUP
Rule 38    comparison_op -> SUPEQ

Terminals, with rules where they appear

2DUP                 : 34
ADD                  : 26
CHAR                 : 19
CONDICIONAL1         : 32
CONDICIONAL2         : 33
CR                   : 18
DASHDASH             : 
DIVIDE               : 29
DOT                  : 24
EMIT                 : 22
FUNCTION             : 17
FUNCTION_STRING      : 21
ID                   : 
INF                  : 35
INFEQ                : 36
MINUS                : 27
MINUS_MINUS          : 
MOD                  : 30
NEWLINE              : 
NOT                  : 
NUMBER               : 23
SPACE                : 20
STRING               : 
SUP                  : 37
SUPEQ                : 38
TIMES                : 28
error                : 

Nonterminals, with rules where they appear

2dup                 : 14
arithmetic_expression : 7
arithmetic_op        : 25
comparison_expression : 8
comparison_op        : 31
condicinal1          : 15
condicinal2          : 16
cr                   : 13
expressiontypes      : 5
function_char        : 10
function_declaration : 4
function_dot         : 6
function_emit        : 11
function_string      : 9
program              : 0
space                : 12
statement            : 2 3 25 25 31 31
statements           : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . function_declaration
    (5) statement -> . expressiontypes
    (6) statement -> . function_dot
    (7) statement -> . arithmetic_expression
    (8) statement -> . comparison_expression
    (9) statement -> . function_string
    (10) statement -> . function_char
    (11) statement -> . function_emit
    (12) statement -> . space
    (13) statement -> . cr
    (14) statement -> . 2dup
    (15) statement -> . condicinal1
    (16) statement -> . condicinal2
    (17) function_declaration -> . FUNCTION
    (23) expressiontypes -> . NUMBER
    (24) function_dot -> . DOT
    (25) arithmetic_expression -> . statement statement arithmetic_op
    (31) comparison_expression -> . statement statement comparison_op
    (21) function_string -> . FUNCTION_STRING
    (19) function_char -> . CHAR
    (22) function_emit -> . EMIT
    (20) space -> . SPACE
    (18) cr -> . CR
    (34) 2dup -> . 2DUP
    (32) condicinal1 -> . CONDICIONAL1
    (33) condicinal2 -> . CONDICIONAL2

    FUNCTION        shift and go to state 17
    NUMBER          shift and go to state 18
    DOT             shift and go to state 19
    FUNCTION_STRING shift and go to state 20
    CHAR            shift and go to state 21
    EMIT            shift and go to state 22
    SPACE           shift and go to state 23
    CR              shift and go to state 24
    2DUP            shift and go to state 25
    CONDICIONAL1    shift and go to state 26
    CONDICIONAL2    shift and go to state 27

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    function_declaration           shift and go to state 4
    expressiontypes                shift and go to state 5
    function_dot                   shift and go to state 6
    arithmetic_expression          shift and go to state 7
    comparison_expression          shift and go to state 8
    function_string                shift and go to state 9
    function_char                  shift and go to state 10
    function_emit                  shift and go to state 11
    space                          shift and go to state 12
    cr                             shift and go to state 13
    2dup                           shift and go to state 14
    condicinal1                    shift and go to state 15
    condicinal2                    shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . function_declaration
    (5) statement -> . expressiontypes
    (6) statement -> . function_dot
    (7) statement -> . arithmetic_expression
    (8) statement -> . comparison_expression
    (9) statement -> . function_string
    (10) statement -> . function_char
    (11) statement -> . function_emit
    (12) statement -> . space
    (13) statement -> . cr
    (14) statement -> . 2dup
    (15) statement -> . condicinal1
    (16) statement -> . condicinal2
    (17) function_declaration -> . FUNCTION
    (23) expressiontypes -> . NUMBER
    (24) function_dot -> . DOT
    (25) arithmetic_expression -> . statement statement arithmetic_op
    (31) comparison_expression -> . statement statement comparison_op
    (21) function_string -> . FUNCTION_STRING
    (19) function_char -> . CHAR
    (22) function_emit -> . EMIT
    (20) space -> . SPACE
    (18) cr -> . CR
    (34) 2dup -> . 2DUP
    (32) condicinal1 -> . CONDICIONAL1
    (33) condicinal2 -> . CONDICIONAL2

    $end            reduce using rule 1 (program -> statements .)
    FUNCTION        shift and go to state 17
    NUMBER          shift and go to state 18
    DOT             shift and go to state 19
    FUNCTION_STRING shift and go to state 20
    CHAR            shift and go to state 21
    EMIT            shift and go to state 22
    SPACE           shift and go to state 23
    CR              shift and go to state 24
    2DUP            shift and go to state 25
    CONDICIONAL1    shift and go to state 26
    CONDICIONAL2    shift and go to state 27

    statement                      shift and go to state 28
    function_declaration           shift and go to state 4
    expressiontypes                shift and go to state 5
    function_dot                   shift and go to state 6
    arithmetic_expression          shift and go to state 7
    comparison_expression          shift and go to state 8
    function_string                shift and go to state 9
    function_char                  shift and go to state 10
    function_emit                  shift and go to state 11
    space                          shift and go to state 12
    cr                             shift and go to state 13
    2dup                           shift and go to state 14
    condicinal1                    shift and go to state 15
    condicinal2                    shift and go to state 16

state 3

    (3) statements -> statement .
    (25) arithmetic_expression -> statement . statement arithmetic_op
    (31) comparison_expression -> statement . statement comparison_op
    (4) statement -> . function_declaration
    (5) statement -> . expressiontypes
    (6) statement -> . function_dot
    (7) statement -> . arithmetic_expression
    (8) statement -> . comparison_expression
    (9) statement -> . function_string
    (10) statement -> . function_char
    (11) statement -> . function_emit
    (12) statement -> . space
    (13) statement -> . cr
    (14) statement -> . 2dup
    (15) statement -> . condicinal1
    (16) statement -> . condicinal2
    (17) function_declaration -> . FUNCTION
    (23) expressiontypes -> . NUMBER
    (24) function_dot -> . DOT
    (25) arithmetic_expression -> . statement statement arithmetic_op
    (31) comparison_expression -> . statement statement comparison_op
    (21) function_string -> . FUNCTION_STRING
    (19) function_char -> . CHAR
    (22) function_emit -> . EMIT
    (20) space -> . SPACE
    (18) cr -> . CR
    (34) 2dup -> . 2DUP
    (32) condicinal1 -> . CONDICIONAL1
    (33) condicinal2 -> . CONDICIONAL2

  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for DOT resolved as shift
  ! shift/reduce conflict for FUNCTION_STRING resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for EMIT resolved as shift
  ! shift/reduce conflict for SPACE resolved as shift
  ! shift/reduce conflict for CR resolved as shift
  ! shift/reduce conflict for 2DUP resolved as shift
  ! shift/reduce conflict for CONDICIONAL1 resolved as shift
  ! shift/reduce conflict for CONDICIONAL2 resolved as shift
    $end            reduce using rule 3 (statements -> statement .)
    FUNCTION        shift and go to state 17
    NUMBER          shift and go to state 18
    DOT             shift and go to state 19
    FUNCTION_STRING shift and go to state 20
    CHAR            shift and go to state 21
    EMIT            shift and go to state 22
    SPACE           shift and go to state 23
    CR              shift and go to state 24
    2DUP            shift and go to state 25
    CONDICIONAL1    shift and go to state 26
    CONDICIONAL2    shift and go to state 27

  ! FUNCTION        [ reduce using rule 3 (statements -> statement .) ]
  ! NUMBER          [ reduce using rule 3 (statements -> statement .) ]
  ! DOT             [ reduce using rule 3 (statements -> statement .) ]
  ! FUNCTION_STRING [ reduce using rule 3 (statements -> statement .) ]
  ! CHAR            [ reduce using rule 3 (statements -> statement .) ]
  ! EMIT            [ reduce using rule 3 (statements -> statement .) ]
  ! SPACE           [ reduce using rule 3 (statements -> statement .) ]
  ! CR              [ reduce using rule 3 (statements -> statement .) ]
  ! 2DUP            [ reduce using rule 3 (statements -> statement .) ]
  ! CONDICIONAL1    [ reduce using rule 3 (statements -> statement .) ]
  ! CONDICIONAL2    [ reduce using rule 3 (statements -> statement .) ]

    statement                      shift and go to state 29
    function_declaration           shift and go to state 4
    expressiontypes                shift and go to state 5
    function_dot                   shift and go to state 6
    arithmetic_expression          shift and go to state 7
    comparison_expression          shift and go to state 8
    function_string                shift and go to state 9
    function_char                  shift and go to state 10
    function_emit                  shift and go to state 11
    space                          shift and go to state 12
    cr                             shift and go to state 13
    2dup                           shift and go to state 14
    condicinal1                    shift and go to state 15
    condicinal2                    shift and go to state 16

state 4

    (4) statement -> function_declaration .

    FUNCTION        reduce using rule 4 (statement -> function_declaration .)
    NUMBER          reduce using rule 4 (statement -> function_declaration .)
    DOT             reduce using rule 4 (statement -> function_declaration .)
    FUNCTION_STRING reduce using rule 4 (statement -> function_declaration .)
    CHAR            reduce using rule 4 (statement -> function_declaration .)
    EMIT            reduce using rule 4 (statement -> function_declaration .)
    SPACE           reduce using rule 4 (statement -> function_declaration .)
    CR              reduce using rule 4 (statement -> function_declaration .)
    2DUP            reduce using rule 4 (statement -> function_declaration .)
    CONDICIONAL1    reduce using rule 4 (statement -> function_declaration .)
    CONDICIONAL2    reduce using rule 4 (statement -> function_declaration .)
    $end            reduce using rule 4 (statement -> function_declaration .)
    ADD             reduce using rule 4 (statement -> function_declaration .)
    MINUS           reduce using rule 4 (statement -> function_declaration .)
    TIMES           reduce using rule 4 (statement -> function_declaration .)
    DIVIDE          reduce using rule 4 (statement -> function_declaration .)
    MOD             reduce using rule 4 (statement -> function_declaration .)
    INF             reduce using rule 4 (statement -> function_declaration .)
    INFEQ           reduce using rule 4 (statement -> function_declaration .)
    SUP             reduce using rule 4 (statement -> function_declaration .)
    SUPEQ           reduce using rule 4 (statement -> function_declaration .)


state 5

    (5) statement -> expressiontypes .

    FUNCTION        reduce using rule 5 (statement -> expressiontypes .)
    NUMBER          reduce using rule 5 (statement -> expressiontypes .)
    DOT             reduce using rule 5 (statement -> expressiontypes .)
    FUNCTION_STRING reduce using rule 5 (statement -> expressiontypes .)
    CHAR            reduce using rule 5 (statement -> expressiontypes .)
    EMIT            reduce using rule 5 (statement -> expressiontypes .)
    SPACE           reduce using rule 5 (statement -> expressiontypes .)
    CR              reduce using rule 5 (statement -> expressiontypes .)
    2DUP            reduce using rule 5 (statement -> expressiontypes .)
    CONDICIONAL1    reduce using rule 5 (statement -> expressiontypes .)
    CONDICIONAL2    reduce using rule 5 (statement -> expressiontypes .)
    $end            reduce using rule 5 (statement -> expressiontypes .)
    ADD             reduce using rule 5 (statement -> expressiontypes .)
    MINUS           reduce using rule 5 (statement -> expressiontypes .)
    TIMES           reduce using rule 5 (statement -> expressiontypes .)
    DIVIDE          reduce using rule 5 (statement -> expressiontypes .)
    MOD             reduce using rule 5 (statement -> expressiontypes .)
    INF             reduce using rule 5 (statement -> expressiontypes .)
    INFEQ           reduce using rule 5 (statement -> expressiontypes .)
    SUP             reduce using rule 5 (statement -> expressiontypes .)
    SUPEQ           reduce using rule 5 (statement -> expressiontypes .)


state 6

    (6) statement -> function_dot .

    FUNCTION        reduce using rule 6 (statement -> function_dot .)
    NUMBER          reduce using rule 6 (statement -> function_dot .)
    DOT             reduce using rule 6 (statement -> function_dot .)
    FUNCTION_STRING reduce using rule 6 (statement -> function_dot .)
    CHAR            reduce using rule 6 (statement -> function_dot .)
    EMIT            reduce using rule 6 (statement -> function_dot .)
    SPACE           reduce using rule 6 (statement -> function_dot .)
    CR              reduce using rule 6 (statement -> function_dot .)
    2DUP            reduce using rule 6 (statement -> function_dot .)
    CONDICIONAL1    reduce using rule 6 (statement -> function_dot .)
    CONDICIONAL2    reduce using rule 6 (statement -> function_dot .)
    $end            reduce using rule 6 (statement -> function_dot .)
    ADD             reduce using rule 6 (statement -> function_dot .)
    MINUS           reduce using rule 6 (statement -> function_dot .)
    TIMES           reduce using rule 6 (statement -> function_dot .)
    DIVIDE          reduce using rule 6 (statement -> function_dot .)
    MOD             reduce using rule 6 (statement -> function_dot .)
    INF             reduce using rule 6 (statement -> function_dot .)
    INFEQ           reduce using rule 6 (statement -> function_dot .)
    SUP             reduce using rule 6 (statement -> function_dot .)
    SUPEQ           reduce using rule 6 (statement -> function_dot .)


state 7

    (7) statement -> arithmetic_expression .

    FUNCTION        reduce using rule 7 (statement -> arithmetic_expression .)
    NUMBER          reduce using rule 7 (statement -> arithmetic_expression .)
    DOT             reduce using rule 7 (statement -> arithmetic_expression .)
    FUNCTION_STRING reduce using rule 7 (statement -> arithmetic_expression .)
    CHAR            reduce using rule 7 (statement -> arithmetic_expression .)
    EMIT            reduce using rule 7 (statement -> arithmetic_expression .)
    SPACE           reduce using rule 7 (statement -> arithmetic_expression .)
    CR              reduce using rule 7 (statement -> arithmetic_expression .)
    2DUP            reduce using rule 7 (statement -> arithmetic_expression .)
    CONDICIONAL1    reduce using rule 7 (statement -> arithmetic_expression .)
    CONDICIONAL2    reduce using rule 7 (statement -> arithmetic_expression .)
    $end            reduce using rule 7 (statement -> arithmetic_expression .)
    ADD             reduce using rule 7 (statement -> arithmetic_expression .)
    MINUS           reduce using rule 7 (statement -> arithmetic_expression .)
    TIMES           reduce using rule 7 (statement -> arithmetic_expression .)
    DIVIDE          reduce using rule 7 (statement -> arithmetic_expression .)
    MOD             reduce using rule 7 (statement -> arithmetic_expression .)
    INF             reduce using rule 7 (statement -> arithmetic_expression .)
    INFEQ           reduce using rule 7 (statement -> arithmetic_expression .)
    SUP             reduce using rule 7 (statement -> arithmetic_expression .)
    SUPEQ           reduce using rule 7 (statement -> arithmetic_expression .)


state 8

    (8) statement -> comparison_expression .

    FUNCTION        reduce using rule 8 (statement -> comparison_expression .)
    NUMBER          reduce using rule 8 (statement -> comparison_expression .)
    DOT             reduce using rule 8 (statement -> comparison_expression .)
    FUNCTION_STRING reduce using rule 8 (statement -> comparison_expression .)
    CHAR            reduce using rule 8 (statement -> comparison_expression .)
    EMIT            reduce using rule 8 (statement -> comparison_expression .)
    SPACE           reduce using rule 8 (statement -> comparison_expression .)
    CR              reduce using rule 8 (statement -> comparison_expression .)
    2DUP            reduce using rule 8 (statement -> comparison_expression .)
    CONDICIONAL1    reduce using rule 8 (statement -> comparison_expression .)
    CONDICIONAL2    reduce using rule 8 (statement -> comparison_expression .)
    $end            reduce using rule 8 (statement -> comparison_expression .)
    ADD             reduce using rule 8 (statement -> comparison_expression .)
    MINUS           reduce using rule 8 (statement -> comparison_expression .)
    TIMES           reduce using rule 8 (statement -> comparison_expression .)
    DIVIDE          reduce using rule 8 (statement -> comparison_expression .)
    MOD             reduce using rule 8 (statement -> comparison_expression .)
    INF             reduce using rule 8 (statement -> comparison_expression .)
    INFEQ           reduce using rule 8 (statement -> comparison_expression .)
    SUP             reduce using rule 8 (statement -> comparison_expression .)
    SUPEQ           reduce using rule 8 (statement -> comparison_expression .)


state 9

    (9) statement -> function_string .

    FUNCTION        reduce using rule 9 (statement -> function_string .)
    NUMBER          reduce using rule 9 (statement -> function_string .)
    DOT             reduce using rule 9 (statement -> function_string .)
    FUNCTION_STRING reduce using rule 9 (statement -> function_string .)
    CHAR            reduce using rule 9 (statement -> function_string .)
    EMIT            reduce using rule 9 (statement -> function_string .)
    SPACE           reduce using rule 9 (statement -> function_string .)
    CR              reduce using rule 9 (statement -> function_string .)
    2DUP            reduce using rule 9 (statement -> function_string .)
    CONDICIONAL1    reduce using rule 9 (statement -> function_string .)
    CONDICIONAL2    reduce using rule 9 (statement -> function_string .)
    $end            reduce using rule 9 (statement -> function_string .)
    ADD             reduce using rule 9 (statement -> function_string .)
    MINUS           reduce using rule 9 (statement -> function_string .)
    TIMES           reduce using rule 9 (statement -> function_string .)
    DIVIDE          reduce using rule 9 (statement -> function_string .)
    MOD             reduce using rule 9 (statement -> function_string .)
    INF             reduce using rule 9 (statement -> function_string .)
    INFEQ           reduce using rule 9 (statement -> function_string .)
    SUP             reduce using rule 9 (statement -> function_string .)
    SUPEQ           reduce using rule 9 (statement -> function_string .)


state 10

    (10) statement -> function_char .

    FUNCTION        reduce using rule 10 (statement -> function_char .)
    NUMBER          reduce using rule 10 (statement -> function_char .)
    DOT             reduce using rule 10 (statement -> function_char .)
    FUNCTION_STRING reduce using rule 10 (statement -> function_char .)
    CHAR            reduce using rule 10 (statement -> function_char .)
    EMIT            reduce using rule 10 (statement -> function_char .)
    SPACE           reduce using rule 10 (statement -> function_char .)
    CR              reduce using rule 10 (statement -> function_char .)
    2DUP            reduce using rule 10 (statement -> function_char .)
    CONDICIONAL1    reduce using rule 10 (statement -> function_char .)
    CONDICIONAL2    reduce using rule 10 (statement -> function_char .)
    $end            reduce using rule 10 (statement -> function_char .)
    ADD             reduce using rule 10 (statement -> function_char .)
    MINUS           reduce using rule 10 (statement -> function_char .)
    TIMES           reduce using rule 10 (statement -> function_char .)
    DIVIDE          reduce using rule 10 (statement -> function_char .)
    MOD             reduce using rule 10 (statement -> function_char .)
    INF             reduce using rule 10 (statement -> function_char .)
    INFEQ           reduce using rule 10 (statement -> function_char .)
    SUP             reduce using rule 10 (statement -> function_char .)
    SUPEQ           reduce using rule 10 (statement -> function_char .)


state 11

    (11) statement -> function_emit .
